Notes/MiniParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.0.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.0.2 Mini.g 2014-11-13 16:55:49

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019



using System;



using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.0.2")]
[System.CLSCompliant(false)]
public partial class MiniParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARGS", "ASSIGN", "BLOCK", "BOOL", "COMMA", "COMMENT", "DECL", "DECLLIST", "DECLS", "DELETE", "DIVIDE", "DOT", "ELSE", "ENDL", "EQ", "FALSE", "FUN", "FUNCS", "GE", "GT", "ID", "IF", "INT", "INTEGER", "INVOKE", "LBRACE", "LE", "LPAREN", "LT", "MINUS", "NE", "NEG", "NEW", "NOT", "NULL", "OR", "PARAMS", "PLUS", "PRINT", "PROGRAM", "RBRACE", "READ", "RETTYPE", "RETURN", "RPAREN", "SEMI", "STMTS", "STRUCT", "TIMES", "TRUE", "TYPE", "TYPES", "VOID", "WHILE", "WS"
	};
	public const int EOF=-1;
	public const int AND=4;
	public const int ARGS=5;
	public const int ASSIGN=6;
	public const int BLOCK=7;
	public const int BOOL=8;
	public const int COMMA=9;
	public const int COMMENT=10;
	public const int DECL=11;
	public const int DECLLIST=12;
	public const int DECLS=13;
	public const int DELETE=14;
	public const int DIVIDE=15;
	public const int DOT=16;
	public const int ELSE=17;
	public const int ENDL=18;
	public const int EQ=19;
	public const int FALSE=20;
	public const int FUN=21;
	public const int FUNCS=22;
	public const int GE=23;
	public const int GT=24;
	public const int ID=25;
	public const int IF=26;
	public const int INT=27;
	public const int INTEGER=28;
	public const int INVOKE=29;
	public const int LBRACE=30;
	public const int LE=31;
	public const int LPAREN=32;
	public const int LT=33;
	public const int MINUS=34;
	public const int NE=35;
	public const int NEG=36;
	public const int NEW=37;
	public const int NOT=38;
	public const int NULL=39;
	public const int OR=40;
	public const int PARAMS=41;
	public const int PLUS=42;
	public const int PRINT=43;
	public const int PROGRAM=44;
	public const int RBRACE=45;
	public const int READ=46;
	public const int RETTYPE=47;
	public const int RETURN=48;
	public const int RPAREN=49;
	public const int SEMI=50;
	public const int STMTS=51;
	public const int STRUCT=52;
	public const int TIMES=53;
	public const int TRUE=54;
	public const int TYPE=55;
	public const int TYPES=56;
	public const int VOID=57;
	public const int WHILE=58;
	public const int WS=59;

	public MiniParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public MiniParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return MiniParser.tokenNames; } }
	public override string GrammarFileName { get { return "Mini.g"; } }



	public CommonTree ParseProgram()
	{
	   var scope = program();
	   return (CommonTree)scope.Tree;
	}

	public static bool _errors = false;

	public static void reportError(RecognitionException recognitionException)
	{
	   Console.WriteLine("error: {0}", recognitionException);
	}

	public static void recover(ITokenStream input, RecognitionException recognitionException)
	{
	}

	// ***********************************************************************************************************



	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();
	// $ANTLR start "program"
	// Mini.g:138:1: program : t= types d= declarations f= functions EOF -> ^( PROGRAM $t $d $f) ;
	[GrammarRule("program")]
	private AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EOF1 = default(IToken);
		AstParserRuleReturnScope<object, IToken> t = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> d = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> f = default(AstParserRuleReturnScope<object, IToken>);

		object EOF1_tree = default(object);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_types=new RewriteRuleSubtreeStream(adaptor,"rule types");
		RewriteRuleSubtreeStream stream_declarations=new RewriteRuleSubtreeStream(adaptor,"rule declarations");
		RewriteRuleSubtreeStream stream_functions=new RewriteRuleSubtreeStream(adaptor,"rule functions");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(138, 3);
		try
		{
			// Mini.g:139:4: (t= types d= declarations f= functions EOF -> ^( PROGRAM $t $d $f) )
			DebugEnterAlt(1);
			// Mini.g:139:7: t= types d= declarations f= functions EOF
			{
			DebugLocation(139, 8);
			PushFollow(Follow._types_in_program1057);
			t=types();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_types.Add(t.Tree);
			DebugLocation(139, 16);
			PushFollow(Follow._declarations_in_program1061);
			d=declarations();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_declarations.Add(d.Tree);
			DebugLocation(139, 31);
			PushFollow(Follow._functions_in_program1065);
			f=functions();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_functions.Add(f.Tree);
			DebugLocation(139, 42);
			EOF1=(IToken)Match(input,EOF,Follow._EOF_in_program1067); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_EOF.Add(EOF1);



			{
			// AST REWRITE
			// elements: t, d, f
			// token labels: 
			// rule labels: t, d, f, retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_t=new RewriteRuleSubtreeStream(adaptor,"rule t",t!=null?t.Tree:null);
			RewriteRuleSubtreeStream stream_d=new RewriteRuleSubtreeStream(adaptor,"rule d",d!=null?d.Tree:null);
			RewriteRuleSubtreeStream stream_f=new RewriteRuleSubtreeStream(adaptor,"rule f",f!=null?f.Tree:null);
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 140:7: -> ^( PROGRAM $t $d $f)
			{
				DebugLocation(140, 10);
				// Mini.g:140:10: ^( PROGRAM $t $d $f)
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(140, 12);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(PROGRAM, "PROGRAM"), root_1);

				DebugLocation(140, 21);
				adaptor.AddChild(root_1, stream_t.NextTree());
				DebugLocation(140, 24);
				adaptor.AddChild(root_1, stream_d.NextTree());
				DebugLocation(140, 27);
				adaptor.AddChild(root_1, stream_f.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		   catch (RecognitionException re)
		   {
		      reportError(re);
		      recover(input, re);
		      _errors = true;
		   }

		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(141, 3);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_types();
	partial void LeaveRule_types();
	// $ANTLR start "types"
	// Mini.g:142:1: types : ( ( STRUCT ID LBRACE )=> types_sub -> ^( TYPES types_sub ) | -> TYPES );
	[GrammarRule("types")]
	private AstParserRuleReturnScope<object, IToken> types()
	{
		EnterRule_types();
		EnterRule("types", 2);
		TraceIn("types", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> types_sub2 = default(AstParserRuleReturnScope<object, IToken>);

		RewriteRuleSubtreeStream stream_types_sub=new RewriteRuleSubtreeStream(adaptor,"rule types_sub");
		try { DebugEnterRule(GrammarFileName, "types");
		DebugLocation(142, 3);
		try
		{
			// Mini.g:143:4: ( ( STRUCT ID LBRACE )=> types_sub -> ^( TYPES types_sub ) | -> TYPES )
			int alt1=2;
			try { DebugEnterDecision(1, false);
			switch (input.LA(1))
			{
			case STRUCT:
				{
				int LA1_2 = input.LA(2);

				if ((EvaluatePredicate(synpred1_Mini_fragment)))
				{
					alt1 = 1;
				}
				else if ((true))
				{
					alt1 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 1, 1, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case INT:
				{
				int LA1_2 = input.LA(2);

				if ((EvaluatePredicate(synpred1_Mini_fragment)))
				{
					alt1 = 1;
				}
				else if ((true))
				{
					alt1 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 1, 2, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case BOOL:
				{
				int LA1_2 = input.LA(2);

				if ((EvaluatePredicate(synpred1_Mini_fragment)))
				{
					alt1 = 1;
				}
				else if ((true))
				{
					alt1 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 1, 3, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case FUN:
				{
				int LA1_2 = input.LA(2);

				if ((EvaluatePredicate(synpred1_Mini_fragment)))
				{
					alt1 = 1;
				}
				else if ((true))
				{
					alt1 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 1, 4, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case EOF:
				{
				int LA1_2 = input.LA(2);

				if ((EvaluatePredicate(synpred1_Mini_fragment)))
				{
					alt1 = 1;
				}
				else if ((true))
				{
					alt1 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 1, 5, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 1, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// Mini.g:143:7: ( STRUCT ID LBRACE )=> types_sub
				{
				DebugLocation(143, 29);
				PushFollow(Follow._types_sub_in_types1113);
				types_sub2=types_sub();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_types_sub.Add(types_sub2.Tree);


				{
				// AST REWRITE
				// elements: types_sub
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				if (state.backtracking == 0) {
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 143:39: -> ^( TYPES types_sub )
				{
					DebugLocation(143, 42);
					// Mini.g:143:42: ^( TYPES types_sub )
					{
					object root_1 = (object)adaptor.Nil();
					DebugLocation(143, 44);
					root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(TYPES, "TYPES"), root_1);

					DebugLocation(143, 50);
					adaptor.AddChild(root_1, stream_types_sub.NextTree());

					adaptor.AddChild(root_0, root_1);
					}

				}

				retval.Tree = root_0;
				}
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// Mini.g:144:7: 
				{

				{
				// AST REWRITE
				// elements: 
				// token labels: 
				// rule labels: retval
				// token list labels: 
				// rule list labels: 
				// wildcard labels: 
				if (state.backtracking == 0) {
				retval.Tree = root_0;
				RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

				root_0 = (object)adaptor.Nil();
				// 144:7: -> TYPES
				{
					DebugLocation(144, 10);
					adaptor.AddChild(root_0, (object)adaptor.Create(TYPES, "TYPES"));

				}

				retval.Tree = root_0;
				}
				}

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		   catch (RecognitionException re)
		   {
		      reportError(re);
		      recover(input, re);
		      _errors = true;
		   }

		finally
		{
			TraceOut("types", 2);
			LeaveRule("types", 2);
			LeaveRule_types();
		}
		DebugLocation(145, 3);
		} finally { DebugExitRule(GrammarFileName, "types"); }
		return retval;

	}
	// $ANTLR end "types"

	partial void EnterRule_types_sub();
	partial void LeaveRule_types_sub();
	// $ANTLR start "types_sub"
	// Mini.g:146:1: types_sub : ( ( STRUCT ID LBRACE )=> type_declaration types_sub |);
	[GrammarRule("types_sub")]
	private AstParserRuleReturnScope<object, IToken> types_sub()
	{
		EnterRule_types_sub();
		EnterRule("types_sub", 3);
		TraceIn("types_sub", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> type_declaration3 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> types_sub4 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "types_sub");
		DebugLocation(146, 3);
		try
		{
			// Mini.g:147:4: ( ( STRUCT ID LBRACE )=> type_declaration types_sub |)
			int alt2=2;
			try { DebugEnterDecision(2, false);
			int LA2_1 = input.LA(1);

			if ((LA2_1==STRUCT))
			{
				int LA2_2 = input.LA(2);

				if ((LA2_2==ID))
				{
					int LA2_3 = input.LA(3);

					if ((LA2_3==LBRACE) && (EvaluatePredicate(synpred2_Mini_fragment)))
					{
						alt2 = 1;
					}
					else if ((LA2_3==ID))
					{
						alt2 = 2;
					}
					else
					{
						if (state.backtracking>0) {state.failed=true; return retval;}
						NoViableAltException nvae = new NoViableAltException("", 2, 3, input, 3);
						DebugRecognitionException(nvae);
						throw nvae;
					}
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 2, 1, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}
			else if ((LA2_1==EOF||LA2_1==BOOL||LA2_1==FUN||LA2_1==INT))
			{
				alt2 = 2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 2, 0, input, 1);
				DebugRecognitionException(nvae);
				throw nvae;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// Mini.g:147:7: ( STRUCT ID LBRACE )=> type_declaration types_sub
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(147, 29);
				PushFollow(Follow._type_declaration_in_types_sub1156);
				type_declaration3=type_declaration();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, type_declaration3.Tree);
				DebugLocation(147, 46);
				PushFollow(Follow._types_sub_in_types_sub1158);
				types_sub4=types_sub();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, types_sub4.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// Mini.g:149:4: 
				{
				root_0 = (object)adaptor.Nil();

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		   catch (RecognitionException re)
		   {
		      reportError(re);
		      recover(input, re);
		      _errors = true;
		   }

		finally
		{
			TraceOut("types_sub", 3);
			LeaveRule("types_sub", 3);
			LeaveRule_types_sub();
		}
		DebugLocation(149, 3);
		} finally { DebugExitRule(GrammarFileName, "types_sub"); }
		return retval;

	}
	// $ANTLR end "types_sub"

	partial void EnterRule_type_declaration();
	partial void LeaveRule_type_declaration();
	// $ANTLR start "type_declaration"
	// Mini.g:150:1: type_declaration : STRUCT ^ ID LBRACE ! nested_decl RBRACE ! SEMI !;
	[GrammarRule("type_declaration")]
	private AstParserRuleReturnScope<object, IToken> type_declaration()
	{
		EnterRule_type_declaration();
		EnterRule("type_declaration", 4);
		TraceIn("type_declaration", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken STRUCT5 = default(IToken);
		IToken ID6 = default(IToken);
		IToken LBRACE7 = default(IToken);
		IToken RBRACE9 = default(IToken);
		IToken SEMI10 = default(IToken);
		AstParserRuleReturnScope<object, IToken> nested_decl8 = default(AstParserRuleReturnScope<object, IToken>);

		object STRUCT5_tree = default(object);
		object ID6_tree = default(object);
		object LBRACE7_tree = default(object);
		object RBRACE9_tree = default(object);
		object SEMI10_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "type_declaration");
		DebugLocation(150, 3);
		try
		{
			// Mini.g:151:4: ( STRUCT ^ ID LBRACE ! nested_decl RBRACE ! SEMI !)
			DebugEnterAlt(1);
			// Mini.g:151:7: STRUCT ^ ID LBRACE ! nested_decl RBRACE ! SEMI !
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(151, 13);
			STRUCT5=(IToken)Match(input,STRUCT,Follow._STRUCT_in_type_declaration1178); if (state.failed) return retval;
			if (state.backtracking == 0) {
			STRUCT5_tree = (object)adaptor.Create(STRUCT5);
			root_0 = (object)adaptor.BecomeRoot(STRUCT5_tree, root_0);
			}
			DebugLocation(151, 15);
			ID6=(IToken)Match(input,ID,Follow._ID_in_type_declaration1181); if (state.failed) return retval;
			if (state.backtracking == 0) {
			ID6_tree = (object)adaptor.Create(ID6);
			adaptor.AddChild(root_0, ID6_tree);
			}
			DebugLocation(151, 24);
			LBRACE7=(IToken)Match(input,LBRACE,Follow._LBRACE_in_type_declaration1183); if (state.failed) return retval;
			DebugLocation(151, 26);
			PushFollow(Follow._nested_decl_in_type_declaration1186);
			nested_decl8=nested_decl();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, nested_decl8.Tree);
			DebugLocation(151, 44);
			RBRACE9=(IToken)Match(input,RBRACE,Follow._RBRACE_in_type_declaration1188); if (state.failed) return retval;
			DebugLocation(151, 50);
			SEMI10=(IToken)Match(input,SEMI,Follow._SEMI_in_type_declaration1191); if (state.failed) return retval;

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		   catch (RecognitionException re)
		   {
		      reportError(re);
		      recover(input, re);
		      _errors = true;
		   }

		finally
		{
			TraceOut("type_declaration", 4);
			LeaveRule("type_declaration", 4);
			LeaveRule_type_declaration();
		}
		DebugLocation(152, 3);
		} finally { DebugExitRule(GrammarFileName, "type_declaration"); }
		return retval;

	}
	// $ANTLR end "type_declaration"

	partial void EnterRule_nested_decl();
	partial void LeaveRule_nested_decl();
	// $ANTLR start "nested_decl"
	// Mini.g:153:1: nested_decl : ( decl SEMI !)+ ;
	[GrammarRule("nested_decl")]
	private AstParserRuleReturnScope<object, IToken> nested_decl()
	{
		EnterRule_nested_decl();
		EnterRule("nested_decl", 5);
		TraceIn("nested_decl", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken SEMI12 = default(IToken);
		AstParserRuleReturnScope<object, IToken> decl11 = default(AstParserRuleReturnScope<object, IToken>);

		object SEMI12_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "nested_decl");
		DebugLocation(153, 3);
		try
		{
			// Mini.g:154:4: ( ( decl SEMI !)+ )
			DebugEnterAlt(1);
			// Mini.g:154:7: ( decl SEMI !)+
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(154, 7);
			// Mini.g:154:7: ( decl SEMI !)+
			int cnt3=0;
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_1 = input.LA(1);

				if ((LA3_1==BOOL||LA3_1==INT||LA3_1==STRUCT))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch (alt3)
				{
				case 1:
					DebugEnterAlt(1);
					// Mini.g:154:8: decl SEMI !
					{
					DebugLocation(154, 8);
					PushFollow(Follow._decl_in_nested_decl1208);
					decl11=decl();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, decl11.Tree);
					DebugLocation(154, 17);
					SEMI12=(IToken)Match(input,SEMI,Follow._SEMI_in_nested_decl1210); if (state.failed) return retval;

					}
					break;

				default:
					if (cnt3 >= 1)
						goto loop3;

					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee3 = new EarlyExitException( 3, input );
					DebugRecognitionException(eee3);
					throw eee3;
				}
				cnt3++;
			}
			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}

		   catch (RecognitionException re)
		   {
		      reportError(re);
		      recover(input, re);
		      _errors = true;
		   }

		finally
		{
			TraceOut("nested_decl", 5);
			LeaveRule("nested_decl", 5);
			LeaveRule_nested_decl();
		}
		DebugLocation(155, 3);
		} finally { DebugExitRule(GrammarFileName, "nested_decl"); }
		return retval;

	}
	// $ANTLR end "nested_decl"

	partial void EnterRule_decl();
	partial void LeaveRule_decl();
	// $ANTLR start "decl"
	// Mini.g:156:1: decl : t= type i= ID -> ^( DECL ^( TYPE $t) $i) ;
	[GrammarRule("decl")]
	private AstParserRuleReturnScope<object, IToken> decl()
	{
		EnterRule_decl();
		EnterRule("decl", 6);
		TraceIn("decl", 6);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken i = default(IToken);
		AstParserRuleReturnScope<object, IToken> t = default(AstParserRuleReturnScope<object, IToken>);
